hphp/test/zend/bad/ext/phar/tests/phar_createdefaultstub.php
<?php
try {
var_dump(Phar::createDefaultStub());
echo "============================================================================\n";
echo "============================================================================\n";
var_dump(Phar::createDefaultStub('my/custom/thingy.php'));
echo "============================================================================\n";
echo "============================================================================\n";
var_dump(strlen(Phar::createDefaultStub(str_repeat('a', 400))));
echo "============================================================================\n";
echo "============================================================================\n";
var_dump(Phar::createDefaultStub(str_repeat('a', 401)));
} catch(Exception $e) {
echo $e->getMessage() . "\n";
}
echo "============================================================================\n";
echo "============================================================================\n";
echo "============================================================================\n";
echo "============================================================================\n";
try {
var_dump(Phar::createDefaultStub('my/custom/thingy.php', 'the/web.php'));
echo "============================================================================\n";
echo "============================================================================\n";
var_dump(strlen(Phar::createDefaultStub('index.php', str_repeat('a', 400))));
var_dump(Phar::createDefaultStub('hio', str_repeat('a', 401)));
} catch (Exception $e) {
echo $e->getMessage() . "\n";
}
?>
===DONE===